presentation tablet + mobile fixed

--- a/BOOKFACE/src/index.css
+++ b/BOOKFACE/src/index.css
@@ -12,6 +12,5 @@ body{
 body{
     height: auto;
     overflow: scroll;
-    padding-bottom: 100px;
 }
 }
